--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -17,5 +17,7 @@ jobs:
         run: heroku container:login
       - name: Build and push new image
         run: heroku container:push web -a motid-areas
-      - name: Deploy new image
-        run: heroku container:release web -a motid-areas
+      - name: Create release image
+        run: heroku container:push release -a motid-areas
+      - name: Release and deploy new image
+        run: heroku container:release web release -a motid-areas
